--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @movie do |f| %>
+<%= form_for @movie, :html => {:multipart => true} do |f| %>
   <% if @movie.errors.any? %>
     <div>
       <%= pluralize(@movie.errors.count, "error") %> prevented this movie from being submitted:
@@ -26,12 +26,12 @@
     <%= f.number_field :runtime_in_minutes %>
   </div>
   <div>
-    <%= f.label :poster_image_url %><br>
-    <%= f.text_field :poster_image_url %>
-  </div>
-  <div>
     <%= f.label :description %><br>
     <%= f.text_area :description %>
+  </div>
+  <div> 
+    <%= f.label :poster %><br>
+    <%= f.file_field :poster %>
   </div>
   <div>
     <%= f.submit "Submit" %>
