--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,13 +4,12 @@
 <h3><%= @movie.release_date %></h3>
 <h4>Dir. <%= @movie.director %> | <%= @movie.runtime_in_minutes %> minutes</h4>
 <p><%= @movie.description %></p>
-<%= @movie.review_average %>/10
+<p><%= image_tag @movie.poster_url(:thumb).to_s %></p>
 <hr>
 <h3>Reviews of <em><%= @movie.title %></em></h3>
 <% if current_user %>
   <% @movie.reviews.each do |review| %>
     <p><%= review.text %></p>
-    <p><%= review.rating_out_of_ten %>/10</p>
     <small>- <%= review.user.full_name %></small><br/>
   <% end %>
   <p><%= link_to "Write a review!", new_movie_review_path(@movie) %></p>
