--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
     		(<%= link_to "Admin", admin_users_path %>)
     		<% else %>
   			<%= link_to "Admin", movies_path %> 
-  			<% flash[:alert] = "You must be an admin to access this page"%>
+  			<% flash.now[:alert] = "You must be an admin to access this page"%>
     	<% end %>
     <% else %>
       <%= link_to "Log In", new_session_path %> | <%= link_to "Sign Up", new_user_path %>
