--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,12 @@
 <h1>Rotten Mangoes</h1>
 <%= link_to "Submit a movie!", new_movie_path %>
+<h2> "Search" </h2>
+<%= form_tag(movies_path, :method => "get") do %>
+  Title: <%= text_field_tag :title %>
+  Director: <%= text_field_tag :director %>
+  <%= select_tag(:runtime_in_minutes, options_for_select([['Select runtime', 0], ['Under 90 minutes', 1], ['Between 90 and 120 minutes', 2], ['Over 120 minutes', 3]]) )%>
+  <%= submit_tag "submit" %>
+<% end %>
 <hr>
 <% @movies.each do |movie| %>
   <%= link_to image_tag(movie.poster), movie_path(movie) %>
