--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,3 +1,3 @@
-<%= link_to "Back to this movie", movie_path(@movie) %>
+<%= link_to "Back to this movie", movies_path(@movie) %>
 <h2>Edit this movie.</h2>
 <%= render 'form' %>
