--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,8 +2,7 @@
 <%= link_to "Submit a movie!", new_movie_path %>
 <h2> "Search" </h2>
 <%= form_tag(movies_path, :method => "get") do %>
-  Title: <%= text_field_tag :title %>
-  Director: <%= text_field_tag :director %>
+  Title and/or Director: <%= text_field_tag :key_word %>
   <%= select_tag(:runtime_in_minutes, options_for_select([['Select runtime', 0], ['Under 90 minutes', 1], ['Between 90 and 120 minutes', 2], ['Over 120 minutes', 3]]) )%>
   <%= submit_tag "submit" %>
 <% end %>
